<resources>
    <string name="app_name">BookTastic</string>

    <!-- Menu Actions -->
    <string name="action_insert">Add Book</string>
    <string name="action_delete_all">Wipe Library Clean</string>

    <!-- Empty View-->
    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No books on these shelves… What a pity…</string>
    <!-- Subtitle text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Editor View -->
    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>
    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>
    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>
    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>
    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>
    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>
    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>
    <string name="category_name_hint">Book Name</string>
    <string name="category_price">Price</string>
    <string name="category_price_hint">Book Price</string>
    <string name="price_unit">€</string>
    <string name="category_quantity">Amount</string>
    <string name="category_quantity_hint">Book Amount</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_supplier_hint">Supplier Name</string>
    <string name="category_supplier_phone_hint">Supplier Phone</string>

    <!-- Exit Dialog -->
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Delete Dialog -->
    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Generics -->
    <string name="sell_btn_desc">Shortcut to sell this item</string>
    <string name="plus">Increase the book amount</string>
    <string name="minus">Decrease the book amount</string>
    <string name="order">Setup a call with the supplier</string>
    <string name="empty_desc">The library is empty!</string>
    <string name="price_format">%.2f €</string>
    <string name="separator">-</string>
    <string name="quantity_format">%d available</string>
    <string name="missing_name">Can\'t save the book without a name!</string>
    <string name="missing_quantity">Can\'t save the book without their amount!</string>
    <string name="missing_price">Can\'t save the book without a price!</string>
    <string name="missing_supplier">Can\'t save the book without a supplier!</string>
    <string name="missing_phone">Can\'t save the book without a supplier name!</string>


</resources>
